ADDED: basic CRUD endpoints of "Epic" entity.